--- a/src/scss/_helper.scss
+++ b/src/scss/_helper.scss
@@ -39,6 +39,7 @@
         .helper__box {
             width: 49%;
             padding: 0px 49px 0;
+            margin-bottom: 20px;
             background-image: url(../img/helper/card-1.webp);
             background-position: center center;
             background-repeat: no-repeat;
@@ -178,7 +179,7 @@
 
 
 .map {
-    padding: 40px 0 380px;
+    padding: 40px 0 67px;
     .no-found {
         margin-top: 40px;
         color: #ffffff;
@@ -187,14 +188,138 @@
         h2.title {display: none;}
             
         .map__form {
+            display: flex;
+            justify-content: space-between;
+            // select
+            .custom-select-wrapper {
+                position: relative;
+                display: inline-block;
+                user-select: none;
+                max-width: 225px;
+                width: 100%;
+                margin-right: 12px;
+              }
+                .custom-select-wrapper select {
+                  display: none;
+                  opacity: 0;
+                }
+                .custom-select {
+                  position: relative;
+                  display: inline-block;
+                  width: 100%;
+                }
+                  .custom-select-trigger {
+                    font-family: $font-family-bold;
+                    height: 40px;
+                    position: relative;
+                    display: flex;
+                    align-items: center;
+                    width: 100%;
+                    padding: 0 13px 0 18px;
+                    font-weight: 700;
+                    font-size: 13px;
+                    line-height: 16px;
+                    color: #1F2E4D;
+                    cursor: pointer;
+                    background: #FFFFFF;
+                    border: 1.12808px solid #F1F0F0;
+                    border-radius: 11.2808px;
+                  }
+                    .custom-select-trigger:after {
+                      position: absolute;
+                      display: block;
+                      content: '';
+                      width: 10px; height: 10px;
+                      top: 50%; right: 18px;
+                      margin-top: -3px;
+                      border-bottom: 1px solid #1F2E4D;
+                      border-right: 1px solid #1F2E4D;
+                      transform: rotate(45deg) translateY(-50%);
+                      transition: all .4s ease-in-out;
+                      transform-origin: 50% 0;
+                    }
+                    .custom-select.opened .custom-select-trigger:after {
+                      margin-top: 3px;
+                      transform: rotate(-135deg) translateY(-50%);
+                    }
+                .custom-options {
+                  position: absolute;
+                  display: block;
+                  top: 100%; left: 0; right: 0;
+                  min-width: 100%;
+                  margin: 15px 0;
+                  border: 1px solid #b5b5b5;
+                  border-radius: 4px;
+                  box-sizing: border-box;
+                  box-shadow: 0 2px 1px rgba(0,0,0,.07);
+                  background: #fff;
+                  transition: all .4s ease-in-out;
+                  
+                  opacity: 0;
+                  visibility: hidden;
+                  pointer-events: none;
+                  transform: translateY(-15px);
+                }
+                .custom-select.opened .custom-options {
+                  opacity: 1;
+                  visibility: visible;
+                  pointer-events: all;
+                  transform: translateY(0);
+                  z-index: 10;
+                }
+                  .custom-options:before {
+                    position: absolute;
+                    display: block;
+                    content: '';
+                    bottom: 100%; right: 25px;
+                    width: 7px; height: 7px;
+                    margin-bottom: -4px;
+                    border-top: 1px solid #b5b5b5;
+                    border-left: 1px solid #b5b5b5;
+                    background: #fff;
+                    transform: rotate(45deg);
+                    transition: all .4s ease-in-out;
+                  }
+                  .option-hover:before {
+                    background: #f9f9f9;
+                  }
+                  .custom-option {
+                    position: relative;
+                    display: block;
+                    padding: 0 22px;
+                    border-bottom: 1px solid #b5b5b5;
+                    font-size: 18px;
+                    font-weight: 600;
+                    color: #b5b5b5;
+                    line-height: 47px;
+                    cursor: pointer;
+                    transition: all .4s ease-in-out;
+                  }
+                  .custom-option:first-of-type {
+                    border-radius: 4px 4px 0 0;
+                  }
+                  .custom-option:last-of-type {
+                    border-bottom: 0;
+                    border-radius: 0 0 4px 4px;
+                  }
+                  .custom-option:hover,
+                  .custom-option.selection {
+                    background: #f9f9f9;
+                  }
+            // input
             .map__search {
                 display: flex;
                 align-items: center;
-                margin-bottom: 44px;
+                margin-bottom: 40px;
+                max-width: 945px;
+                width: 100%;
+                border: 1px solid #EFEEEE;
+                border-radius: 11px;
+                overflow: hidden;
+                padding: 1px;
                 .form__btn {
                     border-radius: 0;
-                    background: #FFFFFF;
-                    border: 1px solid #EFEEEE;      
+                    background: #FFFFFF;   
                     outline: 0;
                     cursor: pointer;
                     height: 40px;
@@ -206,22 +331,23 @@
                 .map__input {
                     border-radius: 0;
                     background: #FFFFFF;
-                    border: 1px solid #EFEEEE;
+                    border: none;
                     outline: 0;
                     height: 40px;
                     margin: 0;
                     border-left: none;
-                    padding: 0 12px;
-                    max-width: 500px;
+                    padding: 0 12px 0 0;
                     width: 100%;
                     color: #000000;
-                    font-size: 12px;
-                    line-height: 135%;
+                    font-size: 9px;
+                    line-height: 11px;
+
                     @include flex-center;
                     &::placeholder {
-                        font-size: 12px;
-                        line-height: 135%;
-                        color: #9C9C9C;
+                        font-weight: 700;
+                        font-size: 9px;
+                        line-height: 11px;
+                        color: #B8B9BA;
                     }
                     
                 }
@@ -232,75 +358,112 @@
             display: flex;
             width: 100%;
             overflow:hidden;
-            min-height: 500px;
-            max-height: 740px;
+            justify-content: space-between;
+            min-height: 300px;
+            max-height: 460px;
             .map__adress {
                 overflow-y: scroll;
                 width: 45%;
-                background: #202F4E;
+                overflow-x: hidden;
+                padding-right: 15px;
+                margin-right: 1%;
                 .box {
-                   padding: 29px 20px 0 29px;
+                   padding: 32px 20px 32px 34px;
+                   background: #FFFFFF;
+                    border-radius: 11px;
+                    margin-bottom: 5.5px;
+                    
+                    z-index: 1;
                    cursor: pointer;
+                   position: relative;
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        top: 0px;
+                        bottom: 0px;
+                        right: 0px;
+                        left: 0px;
+                        background: linear-gradient(73.73deg, #6A8CF9 -9%, #DF6449 108.17%);
+                        border-radius: 11px;
+                        z-index: -2;
+                    }
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        top: 1px;
+                        bottom: 1px;
+                        right: 1px;
+                        left: 1px;
+                        background: #ffffff;
+                        border-radius: 11px;
+                        z-index: -1;
+                    }
+
                    &:last-child  .text-box {
                     border-bottom:  none;
                    }
                    .text-box {
-                    border-bottom:  1px solid #E4DCDC;
-                    padding-bottom: 29px;
                    }
                     h3.title {
                         font-size: 20px;
                         line-height: 29px;
-                        color: #FFFFFF;
-                        margin-bottom: 23px;
+                        color: #6A8CF9;
+                        margin-bottom: 18px;
                     }
                     .adress {
-                        font-size: 16px;
-                        line-height: 24px;
-                        color: #FFFFFF;
-                        margin-bottom: 12px;
+                        font-size: 13px;
+                        line-height: 16px;
+                        color: #1F2E4D;
+                        margin-bottom: 5px;
                     }
                     .box-footer {
                         display: flex;
                         justify-content: space-between;
                         align-items: center;
+                        width: 100%;
                         a.phone {
                             width: 140px;
-                            font-size: 16px;
-                            line-height: 24px;
-                            color: #FFFFFF;
+                            font-size: 13px;
+                            line-height: 16px;
+                            color: #1F2E4D;
                         }
                         a.site {
+                            margin-left: auto;
                             width: 140px;
-                            font-size: 16px;
-                            line-height: 24px;
-                            color: #FFFFFF;
+                            font-size: 13px;
+                            line-height: 16px;
+                            color: #6A8CF9;
                             text-decoration: underline;
+                            text-align: right;
                         }
                         span.empty {
                             width: 140px;
+                            display: none;
                         }
                     }
                     .map-code {
                         display: none;
                     }
                     &.active {
-                        background: #ffffff;
+                        background: linear-gradient(88.22deg, #6A8CF9 8.86%, #DF6449 109.48%);
+                        &::after, &:before {
+                            content: none;
+                        }
                            .text-box {
                             border-bottom:  none;
                            }
                          h3.title {
-                             color: #202F4E;
+                            color: #FFFFFF;
                          }
                          .adress {
-                             color: #202F4E;
+                            color: #FFFFFF;
                          }
                          .box-footer {
                              a.phone {
-                                 color: #202F4E;
+                                color: #FFFFFF;
                              }
                              a.site {
-                                 color: #202F4E;
+                                color: #FFFFFF;
                              }
                          }
                     }
@@ -310,37 +473,61 @@
                     background-repeat:no-repeat;
                     width:7px;
                     height:100%;
-                    }
+                }
                     
-                    &::-webkit-scrollbar-track {
-                    background-color:#E3F0F1;
-                    }
-                    
-                    &::-webkit-scrollbar-thumb {
+                &::-webkit-scrollbar-track {
+                    background: #FFFFFF;
+                    border-radius: 11.0043px;
+                }
+                
+                &::-webkit-scrollbar-thumb {
                     -webkit-border-radius: 0px;
                     border-radius: 0px;
-                    background-color:#5379F9;;
-                    }
-                    
-                    &::-webkit-scrollbar-thumb:hover{
-                    background-color:#5379F9;;
-                    }
-                    
-                    &::-webkit-resizer{
+                    background: #B8B9BA;
+                    border-radius: 11.0043px;
+                }
+                
+                &::-webkit-scrollbar-thumb:hover{
+                    background: #B8B9BA;
+                }
+                
+                &::-webkit-resizer{
                     background-image:url('');
                     background-repeat:no-repeat;
                     width:7px;
                     height:0px;
-                    }
-                    
-                    &::-webkit-scrollbar{
+                }
+                
+                &::-webkit-scrollbar{
                     width: 7px;
-                    }
+                }
             }
             .map__frame {
                 padding: 11px;
-                background: #FFFFFF;
-                width: 55%;
+                width: 54%;
+                position: relative;
+                &::before {
+                    content: "";
+                    position: absolute;
+                    top: 0px;
+                    bottom: 0px;
+                    right: 0px;
+                    left: 0px;
+                    background: linear-gradient(73.73deg, #6A8CF9 -9%, #DF6449 108.17%);
+                    border-radius: 11px;
+                    z-index: -2;
+                }
+                &::after {
+                    content: "";
+                    position: absolute;
+                    top: 1px;
+                    bottom: 1px;
+                    right: 1px;
+                    left: 1px;
+                    background: #ffffff;
+                    border-radius: 11px;
+                    z-index: -1;
+                }
                 .map-code {
                     height: 100%;
                     img, iframe {
@@ -353,20 +540,20 @@
     }
 }
 
-.helper__map {
-    background: #0460A9;
-    padding: 58px 0 96px;
-    .map__block {
-        h2.title {
-            display: block;
-            color: #FFFFFF;
-            font-size: 40px;
-            line-height: 130%;
-            letter-spacing: -0.01em;
-            margin-bottom: 23px;
-        }
-    }
-}
+// .helper__map {
+//     background: #0460A9;
+//     padding: 58px 0 96px;
+//     .map__block {
+//         h2.title {
+//             display: block;
+//             color: #FFFFFF;
+//             font-size: 40px;
+//             line-height: 130%;
+//             letter-spacing: -0.01em;
+//             margin-bottom: 23px;
+//         }
+//     }
+// }
 .header__map {
     padding: 50px 0;
     background: linear-gradient(180deg, #0460A9 0%, #085491 100%);
@@ -411,6 +598,18 @@
             order: 1;
             width: 100%;
             height: 90vw;
+            margin-bottom: 5px;
+        }
+    }
+    .map .map__block .map__box .map__adress {
+        padding-right: 0;
+        margin-right: 0;
+        &::-webkit-scrollbar-track {
+            display: none;
+        }
+        
+        &::-webkit-scrollbar-thumb {
+            display: none;
         }
     }
 }
@@ -421,6 +620,17 @@
     }
 }
 @media (max-width: 768px) {
+    .map .map__block .map__form {
+        flex-wrap: wrap;
+    }
+    .map .map__block .map__form .custom-select-wrapper {
+        max-width: 100%;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    .map .map__block .map__form .map__search {
+        margin-bottom: 10px;
+    }
     .helper-header {
         padding-top: 60px;
         z-index: 0;
@@ -584,15 +794,9 @@
             .map__search {
                 margin-bottom: 14px;
                 .form__btn {
-                    background: #5379F9;
                     border-radius: 0 0 0 10px;
                     min-width: 42px;
                     height: 42px;
-                    svg {
-                        path {
-                            fill: #ffffff;
-                        }
-                    }
                 }
                 .map__input {
                     height: 42px;
@@ -647,7 +851,7 @@
                     .box {
                         border-bottom: none;
                         border-top: 1px solid #0460A9;
-                        padding: 18px 0;
+                        padding: 18px;
                         h3.title {
                             font-size: 16px;
                             line-height: 24px;
@@ -671,6 +875,7 @@
                                 line-height: 19px;
                                 text-decoration-line: underline;
                                 color: #5379F9;
+
                             }
                             span.empty {
                                 display: none;
