--- a/src/scss/_helper.scss
+++ b/src/scss/_helper.scss
@@ -182,7 +182,8 @@
     padding: 40px 0 67px;
     .no-found {
         margin-top: 40px;
-        color: #ffffff;
+        color: #0460a9;
+        font-size: 32px;
     }
     .map__block {
         h2.title {display: none;}
